--- a/MyMatrixLib/Cargo.toml
+++ b/MyMatrixLib/Cargo.toml
@@ -10,7 +10,8 @@ repository = "https://github.com/seba2390"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-MyMatrixLib = { path = "lib" }
+MyMatrixLib = { path = "lib1" }
+MyMathLib = { path = "lib2" }
 num-traits = "0.2"
 rand = "0.8.4"
 
